--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="categories">Categories</string>
-    <string name="suggestions">Suggestions</string>
+    <string name="fruits">Fruits</string>
+    <string name="vegetable">Vegetables</string>
 </resources>
