--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fruits">Fruits</string>
     <string name="vegetable">Vegetables</string>
+    <string name="already_have_an_account">Already have an account? Login</string>
 </resources>
